--- a/src/scss/partials/_common.scss
+++ b/src/scss/partials/_common.scss
@@ -1,4 +1,10 @@
 body {
     color: black;
     background-color: $main-col;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.container {
+    flex-grow: 1;
 }
